--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">BecomeALegend</string>
+    <string name="app_name">Employeer</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="employee">employee</string>
+    <string name="company">company</string>
+    <string name="title_activity_basic">BasicActivity</string>
 </resources>
